methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:4: error: not found: value brushdown
def hunt() {brushdown()
            ^SlugHunting:7: error: not found: value pickUpBaggle
                               while (!isOverBaggle()) {if (!isFacingTrail()) {left(); if (!isFacingTrail()) {right(); right()}}; forward()}; pickUpBaggle()
                                                                                                                                              ^