methods.slug.SlugHunting.scala.code


def hunt() {brushdown()
def isFacingTrail():Boolean = {if (isFacingWall()) {return false}
                                   else {forward(); if (getGroundColor()==Color.green) {backward(); return true} else {backward(); return false}}}
                               while (!isOverBaggle()) {if (!isFacingTrail()) {left(); if (!isFacingTrail()) {right(); right()}}; forward()}; pickUpBaggle()
    // Write your code here


}